--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -45,7 +45,7 @@ input{
 }
 .search-btn{
   cursor: pointer;
-  
+  height: 40px;
   background-color: #c2fbd7;
   border-radius: 100px;
   box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
@@ -91,11 +91,14 @@ input{
 }
 .load-more{
   cursor: pointer;
-  color: #fff;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  border-radius: 100px;
   margin-left: auto;
   margin-right: auto;
-  background-color: darkblue;
+  background-color: #c2fbd7;
   padding: 8px;
   display: flex;
   justify-content: center;
+  border: 0;
 }
